# MLCL-week-3

./: .gitignore  README.md  config.py  data_provider.py  demo.py  hpo.py  log_Qwen2-VL-7B-Instruct_LR2e-5_Beam.txt  main_vlm.py  metrics.py  model_loader.py  nohup_gpu0.out  nohup_gpu1.out  nohup_gpu2.out  nohup_gpu3.out  pyproject.toml  run_safe_hpo.sh
